updated styling and fixed components

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 20px;
   font-family: monospace;
-  background-color: #e2e6d7;
+  background-color: #d9eef4;
   color: #596D6A;
 }
 
