--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,42 @@ div{
   align-items: flex-start;
 }
 
+.apiCard {
+  text-align:  right;
+  background-color:rgb(255, 255, 255);
+  padding: 1rem;
+  width: 12rem;
+  height: 15rem;
+  display: inline-grid;
+  margin: 1rem 1rem;
+  border-radius:10px;
+  align-items: flex-start;
+}
+
+.projectCard {
+  text-align:  center;
+  background-color:white;
+  padding: 1rem;
+  width: 15rem;
+  height: 15rem;
+  display: inline-grid;
+  margin: 2rem 2rem;
+  border-radius:10px;
+}
+
+
+.createCard {
+  text-align:  center;
+  background-color:white;
+  padding: 1rem;
+  width: 30rem;
+  height: 23rem;
+  display: inline-grid;
+  margin: 2rem 2rem;
+  border-radius:10px;
+}
+
+input[type='text']{
+    width: 100%;
+}
+
